testdata/baselines/reference/submodule/compiler/jsFileCompilationHeritageClauseSyntaxOfClass.errors.txt
a.js(1,20): error TS2304: Cannot find name 'D'.


==== a.js (1 errors) ====
    class C implements D { }
                       ~
!!! error TS2304: Cannot find name 'D'.